sass/conditionals/voices-detail.sass
@charset "UTF-8"

// IMPORT COMPASS AND EXTENSIONS
@import compass
@import breakpoint
@import ../../fonts/icons/icons
@import partials/base/00-variables/all
@import partials/base/03-extend/gsb-revamp
@import partials/base/01-mixins/custom

/* Removing the background image that is applied to all pages in the msx or sloan directory */
.page-programs-msx.node-type-voices,
.node-type-msx-fellows.node-type-voices
  #content-wrapper
    background: none
    +breakpoint($bp-tablet-port-min)
      background: none

/* Container holding the image and the text */
.node-type-voices
  #main.column
    +breakpoint($narrow-view min-width)
      padding: 0
  span.title-wrapper
    h1
      display: none
  div#sidebar, div#banner
    display: none

  #content
    max-width: 100%
  .group-header
    color: $text-black
    position: relative
    text-align: center

    /* Voices header image */
    .field-name-field-image-key-image
      img
        max-height: 600px
        //max-height: calc(100vh - 200px)
        width: 100%
        +breakpoint($bp-mobile-max)
          display: none
        +breakpoint($bp-for-tablet-range)
          display: block
          max-height: 100%
          width: 100%
    // Using the profile image for the header image on mobile portrait view.
    .mobile-profile-image
      display: none
      +breakpoint($bp-mobile-max)
        display: block
      +breakpoint($bp-for-tablet-range)
        display: none
    /* Voices title box */
    fieldset.group-voices-group
      border: none
      color: $white
      height: 380px
      margin-left: 15%
      opacity: .9
      padding: 0 45px
      position: absolute
      text-align: left
      top: 50px
      width: 430px
      z-index: 5
      +breakpoint($bp-mobile-max)
        background-color: transparent
        color: $text-black
        height: auto
        position: static
        padding: 0
        margin: 0 18px
        width: 100%
      +breakpoint($bp-for-tablet-range)
        background-color: transparent
        color: $text-black
        height: auto
        position: static
        padding: 0
        margin: 0 18px
        width: 100%
      .field-name-field-slideshow-style
        display: none

      h1,
      .field-name-field-degree-year
        color: $white
        font-family: $font-light
        font-size: 24px
        font-weight: normal
        margin-top: 0
        +breakpoint($bp-mobile-max)
          background-color: transparent
          color: $text-black
        +breakpoint($bp-for-tablet-range)
          background-color: transparent
          color: $text-black

      .label
        background-color: $text-black
        color: $white
        display: inline-block
        font-size: 14px
        font-weight: normal
        line-height: 1.2
        margin-bottom: 30px
        padding: 6px 8px
        position: relative
        z-index: 6

      .field-name-field-title-position-single
        font-size: 22px
        padding-top: 30px
        +breakpoint($bp-mobile-max)
          font-size: 16px
          padding: 20px 0 30px 0
        +breakpoint($bp-for-tablet-range)
          font-size: 16px
          padding: 20px 0 30px 0
    .mobile-profile
      +breakpoint($bp-mobile-max)
        width: 100%
        height: 100%
        margin-left: -18px
    // Colors for the voices box.
    fieldset.group-voices-group.white
      background-color: $white
      h1,
      .field-name-field-degree-year,
      .field-name-field-title-position-single
        color: $text-black
    fieldset.group-voices-group.blue
      background-color: $voices-blue
    fieldset.group-voices-group.purple
      background-color: $purple-bright
    fieldset.group-voices-group.brightteal
      background-color: $voices-teal-med
    fieldset.group-voices-group.pink
      background-color: $voices-pink
    fieldset.group-voices-group.charcoal
      background-color: $voices-charcoal

    fieldset.group-voices-group.white,
    fieldset.group-voices-group.blue,
    fieldset.group-voices-group.purple,
    fieldset.group-voices-group.brightteal,
    fieldset.group-voices-group.pink,
    fieldset.group-voices-group.charcoal
      +breakpoint($bp-for-phone-tablet-range)
        background-color: transparent
  /* Voices top quote */
  .field-name-field-quote
    background: $white
    display: inline-block
    font-family: $font-light
    font-size: 36px
    font-weight: normal
    margin: 0 auto
    margin-top: -83px
    padding: 25px 50px
    position: relative
    text-align: left
    width: 1108px
    +breakpoint($bp-mobile-max)
      font-size: 24px
      left: 18px
      padding: 25px 18px 25px 30px
      position: relative
      top: 10px
      width: 100%
      .mobile-profile
        display: block
    +breakpoint($bp-for-tablet-range)
      font-size: 24px
      left: 18px
      padding: 25px 18px 25px 30px
      position: relative
      top: 10px
      width: 100%
    &:before
      content: "“"
      position: absolute
      left: 13px
      font-size: 90px
      top: 16px
      +breakpoint($bp-mobile-max)
        font-size: 40px
      +breakpoint($bp-for-tablet-range)
        font-size: 40px
    &:after
      content: "”"
    .quote
      display: inline-block
      position: relative
      top: -46px

  // Breadcrumbs
  .breadcrumb
    padding: 0 0 20px 35px

  .field-name-social-buttons-top
    border-bottom: 1px solid $voices-divider
    height: 75px

  /* Voices col set up and adjustment */
  .ds-2col-stacked-fluid
    margin: 0 auto
    .content-wrapper
      margin: 0 auto
      width: 1175px
      +breakpoint($bp-mobile-max)
        padding: 25px 35px
        width: 100%
      +breakpoint($bp-for-tablet-range)
        padding: 25px 35px
        width: 100%

      .group-left
        float: left
        margin: 50px 50px 0 0
        padding-bottom: 20px
        width: 816px
        +breakpoint($bp-mobile-max)
          float: none
          margin: 0
          padding: 0
          width: 100%
        +breakpoint($bp-for-tablet-range)
          float: none
          margin: 0
          padding: 0
          width: 100%
        .field-name-field-body
          @extend %resources-body
          padding: 30px 0 0 35px
          h2, h3, h4, h5, h6, blockquote, ul, li, p
            max-width: 670px
          +breakpoint($bp-mobile-max)
            padding: 0
          +breakpoint($bp-for-tablet-range)
            padding: 0

        .field-name-field-date.field-type-datetime
          display: inline
          float: left
          font-size: 18px
          padding: 50px 0 0 35px
          .date-display-single
            &:after
              content: "|"
              padding-left: 10px
          +breakpoint($bp-mobile-max)
            font-size: 14px
            padding-left: 0
          +breakpoint($bp-for-tablet-range)
            font-size: 14px
            padding-left: 0
        .field-collection-container
          .byline
            display: inline
            float: left
            font-size: 18px
            padding: 50px 0
            .field-collection-view
              margin-left: 10px
              padding: 0
            +breakpoint($bp-mobile-max)
              font-size: 14px
            +breakpoint($bp-for-tablet-range)
              font-size: 14px
        ul.field-name-field-tag
          font-size: 14px
          list-style: none
          li
            display: inline-block
            padding-left: 3px
            &:after
              content: ","
          li.last
            &:after
              content: ""
        .field-name-field-voices-cta
          border-top: 1px solid $voices-divider
          height: 150px
          position: relative
          top: 30px
          width: 100%
          a.cta
            background-color: $red-dark
            color: $white
            display: block
            float: right
            font-size: 16px
            height: 60px
            margin-top: 50px
            padding: 20px 20px 20px 25px
            position: relative
            width: 330px
            @extend %bg-and-box-shadow
            +icon-after("arrow-double-right", true)
              font-size: 18px
              font-weight: normal
              line-height: 0
              margin-top: 0
              position: absolute
              right: 20px
              top: 50%
            &:hover
              color: $white
            &:after
              color: $white

      .group-right
        border-top: 1px solid $voices-divider
        float: left
        margin: 50px 0 0 0
        padding-top: 40px
        width: 273px
        .field-label
          font-family: $font-demi
          font-size: 20px
          font-weight: normal
          padding: 15px 0 5px
        .field-items
          div
            line-height: 1.5
        .background-rail-img
          margin-left: 102px
          margin-top: -75px
          position: absolute
          img
            border: 1px solid $voices-divider
            border-radius: 50%
            width: 74px
            height: 74px
        .field-name-voices-ct-background-rail
          width: 100%
          a.cta
            color: $red
            display: block
            font-size: 16px
            height: 60px
            margin-top: 30px
            padding: 10px 20px 20px 25px
            position: relative
            width: 100%
            @extend %bg-and-box-shadow
            +icon-after("arrow-double-right", true)
              color: $grey-e3 !important
              font-size: 18px
              font-weight: normal
              line-height: 0
              margin-top: 0
              position: absolute
              right: 20px
              top: 50%
            &:hover
              color: $red
            &:after
              color: $red
        fieldset.group-wrapper-related
          .fieldset-wrapper
            overflow: hidden


  // Social media buttons
  .field-collection-container
    border-bottom: 1px solid $voices-divider
  .field-name-social-buttons-top,
  .field-name-social-buttons-bottom
    .item-list ul
      margin: 0 0 0 25px
      li
        margin: 0
    li
      display: inline-block
      vertical-align: top
  .field-name-social-buttons-bottom
    .item-list ul
      margin: 0 0 0 50px

  // Top social buttons
  .field-name-social-buttons-top
    @extend %black-border-top-small
    @extend %social-buttons-top
    border-top: 1px $voices-divider solid
    margin-bottom: 0
    +breakpoint(1080px 999px)
      +social-buttons-small
    +breakpoint(745px max-width)
      +social-buttons-small
  // Bottom social buttons
  .field-name-social-buttons-bottom
    @extend %social-buttons-bottom
    margin-top: 10px
    padding: 0 20px 0 0

  .sharrre .box .count
    padding-top: 8px
    padding-right: 10px
    padding: 8px 10px 0 0

  // Share this short url
  // Wrapper
  .short-url-wrapper
    @extend %short-url-wrapper
    border-left: solid 1px $voices-divider
    margin-bottom: 0
    padding-left: 20px

  .short-url
    @extend %short-url

  .field.field-name-social-buttons-bottom,
  .short-url-wrapper
    display: inline-block

